examples/test/testpolicy17120.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17120
  namespace: namespace65
spec:
  podSelector:
    matchLabels:
      key28: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value39
      podSelector:
        matchLabels:
          key10: value11
          key16: value17
          key8: value11
